IDE-STM32/.metadata/.plugins/org.eclipse.cdt.ui/TP3-Dernier.build.log
15:45:03 **** Incremental Build of configuration Debug for project TP3-Dernier ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L152xE -c -I../Core/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:264:17: error: expected ';' before 'void'
  264 | int __io_putchar
      |                 ^
      |                 ;
......
  271 | void Error_Handler(void)
      | ~~~~             
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

15:45:03 Build Failed. 2 errors, 0 warnings. (took 256ms)

